<resources>
    <string name="app_name">ProgrammerCalculator</string>

    <string name="clear">Clear</string>


    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="decimalPoint">.</string>
    <string name="equals">=</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>

    <string name="binaryMode">Bin</string>
    <string name="octalModee">Oct</string>
    <string name="decimalMode">Dec</string>
    <string name="hexadecimalMode">Hex</string>


















    // JONATHAN FROM GITHUB


</resources>
